--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
