--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "NodeNext", /* changes from bundler*/
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "downlevelIteration": true, /* added that one*/
     "plugins": [
       {
         "name": "next"
