--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "NodeNext", /* changes from bundler*/
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "downlevelIteration": true, /* added that one*/
+    // "downlevelIteration": true, /* added that one*/
     "plugins": [
       {
         "name": "next"
